# GitExtended

./: .gitignore  CMakeLists.txt  CMakePresets.json  GitExtended.cpp  Main.cpp  README.md  pch.h  tests.cpp  utilities.cpp  utilities.h  vcpkg.json
gitex/: CMakeLists.txt
gitex/src/: CMakeLists.txt  Main.cpp
libgitex/inc/: GitExtended.h  git_operation.h  git_wrapper.h  utilities.h
libgitex/src/: CMakeLists.txt  git_operation.cpp  git_wrapper.cpp  utilities.cpp
tests/src/: CMakeLists.txt  tests.cpp
